# parity-common

primitive-types/impls/serde/: Cargo.toml
