[package]
name = "impl-serde"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/paritytech/parity-common"
description = "Serde serialization support for uint and fixed hash."

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.0.9", optional=true }

[dev-dependencies]
criterion = "0.3.0"
uint = "0.8.1"
serde_json = "1.0.40"

[[bench]]
name = "impl_serde"
harness = false
